# distributed-mpc-reinforcement-learning

./: .mypy.ini  LICENSE  pyproject.toml  requirements.txt  test.py
data/: C_True02102755480554.pkl  C_True02103137369716.pkl  C_True02104614169024.pkl  C_True02110739803940.pkl  C_True02113426215277.pkl  centralised_10000.pkl  centralised_2000  decentralised_2000  decentralised_5000_better_but_rising  decentralised_diverging_example.pkl  dist_10000_better.pkl  distributed_1000_good.pkl  pars.eps  plot_data.py  plot_data_academic_example.py  plot_data_power.py  states.eps
data/academic_ex_data/: plot_data_academic_example.py
data/best_comparrison_currently/: decent_consens.pkl
data/power_data/: plot_data_power.py  plot_power_eval.py
examples/: evaluation.py
examples/centralized/: centralized_q_learning.py  distributed_q_learning.py  evaluation.py
examples/centralized/greenhouse/: disturbances.npy  env.py  model.py  q_learning_greenhouse.py
examples/decentralized/: academic_example.py  distributed_q_learning.py
examples/decentralized/power_system/: env_power.py  evaluate_power.py  model.py  model_2008.py  model_Hycon2.py  plot_power.py  power_system_example.py  q_learning.py  q_learning_power.py
examples/distributed/: centralized_data.pkl  env.py  evaluate_policy.py  learnable_mpc.py  model.py  train.py  vizualization.py
examples/pwa/: ACC_fleet.py  simple_2D.py
examples/pwa/ACC_fleet/: ACC_env.py  ACC_fleet.py
plotting/academic/: plot_data_academic_example.py
plotting/power/: plot_data_power.py  plot_power_eval.py
src/dmpcrl/agents/: lstd_ql_coordinator.py
src/dmpcrl/core/: admm.py  consensus.py
src/dmpcrl/mpc/: mpc_admm.py
src/dmpcrl/utils/: discretisation.py  solver_options.py  tikz.py
src/rldmpc/agents/: agent.py  agent_coordinator.py  decent_mld_coordinator.py  g_admm_coordinator.py  lstd_ql_coordinator.py  mld_agent.py  pwa_agent.py  sequential_mld_coordinator.py  sqp_admm_coordinator.py
src/rldmpc/core/: admm.py  consensus.py
src/rldmpc/cvxpy_system/: admm.py  agent.py  evaluation.py
tests/: test_dual_vars.py  test_examples.py
(+7 files in other folders)
